a wee bit of branding

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         { 
             "label": "build",
             "type": "shell",
-            "command": "./publish.ps1",
+            "command": "./build1.ps1",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
