--- a/src/daemon.yaml
+++ b/src/daemon.yaml
@@ -439,6 +439,7 @@ paths:
                   type: string
                 save_passphrase:
                   type: boolean
+                  default: false
       responses:
         200:
           $ref: "#/components/responses/empty"
